--- a/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
+++ b/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
@@ -37,7 +37,7 @@
 		\subsubsection{Informativi}
 		\begin{itemize}
 			\item \textbf{Glossario}: \Glossario;
-			\item \textbf{Capitolato d'Appalto C1}, \emph{APIM}: An API Market Platform
+			\item \textbf{Capitolato d'Appalto C1}, \emph{\gloss{API}M}: An API Market Platform
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C1.pdf};
 			\item \textbf{Capitolato d'Appalto C2}, \emph{AtAVi}: Accoglienza tramite Assistente Virtuale
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C2.pdf};
@@ -47,7 +47,7 @@
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C4.pdf};
 			\item \textbf{Capitolato d'Appalto C5}, \emph{Monolith}: an interactive bubble provider
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C5.pdf};
-			\item \textbf{Capitolato d'Appalto C6}, \emph{SWEDesigner}: editor di diagrammi UML con generazione di codice
+			\item \textbf{Capitolato d'Appalto C6}, \emph{SWEDesigner}: \gloss{editor} di diagrammi \gloss{UML} con generazione di codice
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf};
 		\end{itemize}
 
@@ -57,32 +57,32 @@
 	\subsection{\emph{SWEDesigner}: editor di diagrammi UML con generazione di codice}
 		\subsubsection{Descrizione}
 		Lo scopo principale del capitolato è quello di realizzare un'\gloss{applicazione web} composta da almeno due disegnatori
-		ed un coordinatore, che permetta all'utente di costruire diagrammi \gloss{UML} rappresentativi del prodotto da svilupparsi e generi a partire da essi codice 
+		ed un coordinatore, che permetta all'utente di costruire diagrammi UML rappresentativi del prodotto da svilupparsi e generi a partire da essi codice 
 		\gloss{Java} o \gloss{JavaScript}.
-		\\In particolare l'\gloss{editor} dovrebbe concentrarsi su uno specifico dominio applicativo (l'esempio fornito nel capitolato d'appalto è relativo ai software 
+		\\In particolare l'editor dovrebbe concentrarsi su uno specifico dominio applicativo (l'esempio fornito nel capitolato d'appalto è relativo ai software 
 		di giochi da tavolo) per andare a costituire una sorta di \gloss{framework} per la produzione della relativa famiglia di prodotti.
 		
 		
-		Lo scopo profondo del capitolato è quello di analizzare quali diagrammi \gloss{UML} siano i più adatti allo scopo di descrivere l'architettura 
+		Lo scopo profondo del capitolato è quello di analizzare quali diagrammi UML siano i più adatti allo scopo di descrivere l'architettura 
 		e le componenti funzionali di un progetto software e come si possa concertare una loro integrazione per arrivare a produrre un eseguibile vero e proprio. 
-		\\Attualmente, infatti, \gloss{UML} non è altro che un grande aggregato di convenzioni di modellazione che coprono, sì, a diversi livelli di raffinamento differenti 
+		\\Attualmente, infatti, UML non è altro che un grande aggregato di convenzioni di modellazione che coprono, sì, a diversi livelli di raffinamento differenti 
 		fasi e aspetti dello sviluppo di prodotti software, ma al contempo risultano a tal punto eterogenei l'uno rispetto all'altro da non risultare integrabili e componibili. 
 		\\La richiesta è quindi quella di indagare come si potrebbe superare la debolezza intrinseca dell'Unified Modeling Language nella sincronizzazione tra 
 		codice e quanto disegnato nei diagrammi stessi e sperimentare la possibilità di avvicinare le due fasi di progettazione e codifica, esplorando le 
 		interazioni e le eventuali estensioni necessarie a legare fra loro queste due fasi.
 		\subsubsection{Studio del dominio}
-			\paragraph{Dominio applicativo} Il dominio applicativo del seguente capitolato riguarda l'ambito della generazione di codice a partire dal linguaggio \gloss{UML}. Il prodotto si rivolge quindi, ad un target di programmatori interessati alla creazione di programmi appartenenti all'ambito dei giochi da tavolo. I clienti verranno guidati durante il percorso di realizzazione del proprio prodotto, ma dovranno possedere una certa esperienza e conoscenza nell'ambito della programmazione software, del linguaggio \gloss{UML} e dei suoi diagrammi.
+			\paragraph{Dominio applicativo} Il dominio applicativo del seguente capitolato riguarda l'ambito della generazione di codice a partire dal linguaggio UML. Il prodotto si rivolge quindi, ad un target di programmatori interessati alla creazione di programmi appartenenti all'ambito dei giochi da tavolo. I \gloss{client}i verranno guidati durante il percorso di realizzazione del proprio prodotto, ma dovranno possedere una certa esperienza e conoscenza nell'ambito della programmazione software, del linguaggio UML e dei suoi diagrammi.
 			
 			\paragraph{Dominio tecnologico}
-			Il capitolato richiede che il sistema sia realizzato con tecnologie Web. In particolare la parte \gloss{server} deve essere realizzata in \gloss{Java} con il \gloss{server} 
-			\gloss{Tomcat} o in \gloss{Javascript} con il \gloss{server} \gloss{Node.js}. La parte \gloss{client}, invece, deve essere eseguibile in un browser \gloss{HTML5} ed utilizzare fogli di stile \gloss{CSS} per 
-			l'aspetto estetico e \gloss{JavaScript} per la parte attiva.
+			Il capitolato richiede che il sistema sia realizzato con tecnologie Web. In particolare la parte \gloss{server} deve essere realizzata in Java con il server 
+			\gloss{Tomcat} o in Javascript con il server \gloss{Node.js}. La parte client, invece, deve essere eseguibile in un browser \gloss{HTML}5 ed utilizzare fogli di stile \gloss{CSS} per 
+			l'aspetto estetico e JavaScript per la parte attiva.
 		
 		\subsubsection{Aspetti positivi e negativi}
 		Molti sono stati riconosciuti dal gruppo come gli aspetti positivi di tale progetto:
 		\begin{itemize}
 			\item le problematiche affrontate dal capitolato hanno suscitato in tutti i membri una forte motivazione, legata alla necessità di confrontarsi 
-			con problemi quali la generazione automatica di codice e il raffinamento dell'\gloss{UML};
+			con problemi quali la generazione automatica di codice e il raffinamento dell'UML;
 			\item la chiarezza e precisione con cui le caratteristiche e i requisiti del progetto sono stati elencati e descritti;
 			\item la possibilità di collaborare attivamente con quella che è considerata 
 			la prima \emph{software house} italiana;
@@ -106,10 +106,10 @@
 \section{Studio di fattibilità degli altri capitolati}
 	\subsection{Capitolato C1: \emph{APIM}: An API Market Platform}
 		\subsubsection{Descrizione}
-		Lo scopo di questo capitolato è quello di creare un'\gloss{applicazione web} che rappresenti una sorta di \gloss{marketplace} per la consultazione e 
-		condivisione di microservizi. Tra le funzionalità che il prodotto software dovrebbe fornire vi sono la possibilità di registrare le \gloss{API} 
+		Lo scopo di questo capitolato è quello di creare un'applicazione web che rappresenti una sorta di \gloss{marketplace} per la consultazione e 
+		condivisione di microservizi. Tra le funzionalità che il prodotto software dovrebbe fornire vi sono la possibilità di registrare le API 
 		di un microservizio, consultarle e ritrovare la relativa documentazione e visualizzare i relativi dati tecnici; inoltre è richiesta la 
-		funzionalità di associare ad ogni \gloss{API} diverse chiavi d'uso, monitorare il suo utilizzo, limitare il suo uso da parte di utenti in possesso 
+		funzionalità di associare ad ogni API diverse chiavi d'uso, monitorare il suo utilizzo, limitare il suo uso da parte di utenti in possesso 
 		di chiavi scadute o non valide.
 		\subsubsection{Studio del dominio}
 			\paragraph{Dominio applicativo}
@@ -121,10 +121,10 @@
 			\paragraph{Dominio tecnologico}
 			Per quanto riguarda il set di tecnologie da utilizzarsi, ItalianaSoftware richiede ai gruppi impegnati sul progetto:
 			\begin{itemize}
-			\item di sviluppare il front end della web application con l'ausilio della terna \gloss{JavaScript}, \gloss{HTML} e \gloss{CSS3};
-			\item di scegliere tra una base di dati \gloss{SQL} o \gloss{NoSQL} per quanto riguarda il database.\\
+			\item di sviluppare il front end della web application con l'ausilio della terna JavaScript, HTML e \gloss{CSS3};
+			\item di scegliere tra una base di dati \gloss{SQL} o NoSQL per quanto riguarda il database.\\
 			\end{itemize}
-			L'azienda suggerisce fortemente di utilizzare per la rappresentazione delle interfacce e per la creazione del \gloss{marketplace}
+			L'azienda suggerisce fortemente di utilizzare per la rappresentazione delle interfacce e per la creazione del marketplace
 			il linguaggio orientato ai microservizi: Jolie.
 		\subsubsection{Aspetti positivi e negativi}
 		Fra le note positive emerse nell'analisi del capitolato ci sono:
@@ -148,7 +148,7 @@
 		\begin{itemize}
 			\item un'interfaccia web per permettere all'utente di interagire con l'utilizzatore del sistema;
 			\item un'interfaccia per trasmettere informazioni attraverso il canale comunicativo aziendale \gloss{Slack};
-			\item un sistema che sfrutti gli \gloss{AWS} per l'interazione con le \gloss{API} dell'assistente virtuale scelto.
+			\item un sistema che sfrutti gli \gloss{AWS} per l'interazione con le API dell'assistente virtuale scelto.
 		\end{itemize}
 		Il capitolato si configura pertanto sia come un'indagine su ulteriori ambiti di integrazione di tali tecnologie, sia come la dimostrazione 
 		di come anche in ambito aziendale esse possano contribuire a rendere più efficiente e moderno l'ambiente lavorativo.
@@ -161,17 +161,17 @@
 			\paragraph{Dominio tecnologico}
 			Fra le tecnologie con cui è richiesto confrontarsi per la realizzazione di tale progetto vi sono:
 			\begin{itemize}
-				\item i servizi offerti dall'\gloss{infrastruttura} degli \gloss{AWS};
-				\item database \gloss{NoSQL} per la memorizzazione e l'analisi delle informazioni raccolte nel corso delle interazioni con il cliente;
-				\item linguaggio di programmazione \gloss{Node.js};
-				\item il sistema di comunicazione aziendale \gloss{Slack};
+				\item i servizi offerti dall'\gloss{infrastruttura} degli AWS;
+				\item database NoSQL per la memorizzazione e l'analisi delle informazioni raccolte nel corso delle interazioni con il cliente;
+				\item linguaggio di programmazione Node.js;
+				\item il sistema di comunicazione aziendale Slack;
 				\item gli \gloss{SDK} dei principali assistenti virtuali sul mercato, quali Cortana, Siri e Google Home.
 			\end{itemize}
 		\subsubsection{Aspetti positivi e negativi}
 		Fra i lati positivi del capitolato figurano:
 		\begin{itemize}
 			\item l'offerta di formazione da parte dell'azienda sulle principali tecnologie;
-			\item la possibilità di lavorare con il supporto di un \gloss{server} dedicato configurato tramite gli \gloss{AWS}.
+			\item la possibilità di lavorare con il supporto di un server dedicato configurato tramite gli AWS.
 		\end{itemize}
 		Le criticità piu importati riguardano:
 		\begin{itemize}
@@ -196,9 +196,9 @@
 			\item disegnare gli scenari di danno che possono colpire l'azienda;
 			\item ottenere dei risultati di analisi relativamente a tali scenari di rischio.
 		\end{itemize}
-		Quest'ultimo punto verrebbe attuato utilizzando il database per le situazioni di danno dell'azienda e il \gloss{server} di analisi, sempre di proprietà dell'azienda,
+		Quest'ultimo punto verrebbe attuato utilizzando il database per le situazioni di danno dell'azienda e il server di analisi, sempre di proprietà dell'azienda,
 		che opera utilizzando un algoritmo proprietario.
-		\\L'applicazione deve inoltre garantire un corretto funzionamento su desktop, tablet e dispositivi mobile e utilizzare \gloss{API} e database proprietari dell'azienda.
+		\\L'applicazione deve inoltre garantire un corretto funzionamento su desktop, tablet e dispositivi mobile e utilizzare API e database proprietari dell'azienda.
 		\subsubsection{Studio del dominio}
 			\paragraph{Dominio applicativo}
 			Il contesto in cui l'applicazione opera costituisce una realtà di attuale interesse, soprattutto in un paese come il nostro dove sempre più spesso le catastrofi climatiche,
@@ -211,11 +211,11 @@
 			\paragraph{Dominio tecnologico}
 			Nonostante la relativa libertà nell'utilizzo dello \gloss{stack} tecnologico le tecnologie proposte sono:
 			\begin{itemize}
-				\item gli \gloss{AWS} come servizio per l'organizzazione di un \gloss{server} entro cui far operare l'applicativo;
-				\item \gloss{Django}, come \gloss{framework} in \gloss{Python} per la realizzazione del front-end dell'applicativo;
+				\item gli AWS come servizio per l'organizzazione di un server entro cui far operare l'applicativo;
+				\item \gloss{Django}, come framework in \gloss{Python} per la realizzazione del front-end dell'applicativo;
 				\item \gloss{PostgreSQL}, per la realizzazione del database di appoggio del software;
-				\item Librerie e \gloss{framework} quali \gloss{Bootstrap} e \gloss{React.js} per la creazione di interfacce utente, \gloss{hammer.js} e \gloss{Yeoman};
-				\item \gloss{Html}, \gloss{Css} e \gloss{JavaScript} per la realizzazione dell'interfaccia utente.
+				\item Librerie e framework quali \gloss{Bootstrap} e \gloss{React.js} per la creazione di interfacce utente, hammer.js e Yeoman;
+				\item Html, Css e JavaScript per la realizzazione dell'interfaccia utente.
 			\end{itemize}
 		\subsubsection{Aspetti positivi e negativi}
 		Per quanto riguarda gli aspetti positivi, oltre all'utilità dell'applicazione stessa, non ne sono stati evidenziati altri.
@@ -233,7 +233,7 @@
 		\subsubsection{Descrizione}
 		Il progetto prevede la realizzazione di un'applicazione per dispositivi mobili in ambiente Android che agevoli, grazie all'uso di appropriate tecnologie, 
 		la lettura da parte di persone affette da dislessia.
-		\\La proposta richiede inoltre che l'applicativo, indifferentemente un lettore di ebook o un \gloss{client} di messaggistica, utilizzi un motore di sintesi 
+		\\La proposta richiede inoltre che l'applicativo, indifferentemente un lettore di ebook o un client di messaggistica, utilizzi un motore di sintesi 
 		vocale come ausilio alla lettura, evidenziando le parole del testo, in modo sincronizzato con l'audio sintetizzato. 
 		\\Un'ulteriore funzionalità da fornire, considerata molto utile per persone affette da dislessia, consiste nella la possibilità di 
 		modificare la visualizzazione del contenuto da leggere attraverso l'uso di particolari sistemi di colori, spaziature fra lettere, differenti dimensioni 
@@ -244,7 +244,7 @@
 			\\Da un lato la dislessia, che nel nostro paese al giorno d'oggi rappresenta il disturbo dell'apprendimento più diffuso e che incide non poco nella 
 			vita delle persone che ne sono affette in quanto rende difficoltosa una delle attività fondamentali della routine quotidiana: la lettura. 
 			\\Dall'altro si spinge il gruppo fornitore a confrontarsi con una delle tecnologie che sta avendo negli ultimi tempi una diffusione sempre 
-			maggiore, quella del \gloss{Text-to-Speech}, alla base di applicazioni di grande importanza quali screenreader, lettori di messaggi, voci di 
+			maggiore, quella del Text-to-Speech, alla base di applicazioni di grande importanza quali screenreader, lettori di messaggi, voci di 
 			assistenti virtuali e probabilmente futura interfaccia per tutte quelle attività in cui è precluso, o comunque limitato, l'utilizzo della vista.
 			\paragraph{Dominio tecnologico}
 			Viene lasciato un ampio margine di libertà per quanto riguarda le tecnologie da impiegarsi, purché risultino adeguate allo scopo. 
@@ -254,8 +254,8 @@
 			\item l'utilizzo di un servizio di sintesi vocale, con consiglio per il motore di sintesi “Flexible and Adaptive Text-To-Speech”.
 			\end{itemize}
 			Nel caso si proceda allo sviluppo di un ebook reader, il proponente consiglia di utilizzare una libreria di terze parti preferibilmente 
-			\gloss{open source} per accedere al contenuto. Allo stesso modo, nel caso in cui si decida di estendere le funzionalità di un \gloss{client} di messaggistica, 
-			si suggerisce di partire da uno già esistente, possibilmente \gloss{open source}.
+			open source per accedere al contenuto. Allo stesso modo, nel caso in cui si decida di estendere le funzionalità di un client di messaggistica, 
+			si suggerisce di partire da uno già esistente, possibilmente open source.
 		\subsubsection{Aspetti positivi e negativi}
 		Tra le criticità è stato evidenziato il fatto che in tale capitolato ci sia da sviluppare un applicazione per dispositivi mobili.
 		\\Le applicazioni per dispositivi mobili, infatti, richiedono un particolare bagaglio di conoscenze e una certa esperienza in tale campo che
@@ -268,10 +268,10 @@
 		
 	\subsection{Capitolato C5: \emph{Monolith}: an interactive bubble provider}
 		\subsubsection{Descrizione}
-		Lo scopo del capitolato è quello di realizzare un \gloss{framework} che consenta agli sviluppatori di creare in modo relativamente semplice delle 
+		Lo scopo del capitolato è quello di realizzare un framework che consenta agli sviluppatori di creare in modo relativamente semplice delle 
 		interactive bubbles in grado di integrarsi con l'ambiente l'applicazione di messagistica Rocket.chat.
 		\\Una interactive bubble viene intesa dal proponente come una sorta di mini-applicativo autonomo all'interno del canale di comunicazione 
-		che consente di arricchire di funzionalità il \gloss{client} di messaggistica in uso e condividere informazioni complesse e strutturate. 
+		che consente di arricchire di funzionalità il client di messaggistica in uso e condividere informazioni complesse e strutturate. 
 		\\A scopo dimostrativo occorre includere delle bolle interattive predefinite pronte da essere utilizzate da parte degli utenti finali.
 		
 		\subsubsection{Studio del dominio}
@@ -288,14 +288,14 @@
 			\paragraph{Dominio tecnologico}
 			Le tecnologie da utilizzarsi nel progetto sono le seguenti:
 			\begin{itemize}
-				\item \gloss{Javascript} versione 6 per la versione dimostrativa da mostrare al proponente e il \gloss{framework} finale;
-				\item \gloss{framework} quali \gloss{Angular.js} e \gloss{React.js} sono consigliati per la realizzazione del front-end dell'applicazione;
+				\item Javascript versione 6 per la versione dimostrativa da mostrare al proponente e il framework finale;
+				\item framework quali \gloss{Angular.js} e React.js sono consigliati per la realizzazione del front-end dell'applicazione;
 				\item \gloss{SCSS} per l'interfaccia utente.
 			\end{itemize}
 			Viene inoltre richiesto che il codice sorgente di Monolith e la relativa versione dimostrativa siano pubblicate e versionate utilizzando 
-			\gloss{GitHub} o \gloss{Bitbucket}.
+			\gloss{Git}Hub o \gloss{Bitbucket}.
 		\subsubsection{Aspetti positivi e negativi}
-		L'ambito applicativo del progetto risulta sicuramente ricco di spunti interessanti, soprattutto per l'importanza cruciale che i \gloss{client} di 
+		L'ambito applicativo del progetto risulta sicuramente ricco di spunti interessanti, soprattutto per l'importanza cruciale che i client di 
 		messaggistica odierni hanno assunto nello scambio di informazioni.
 		\\Tra gli aspetti negativi messi in evidenza ci sono:
 		\begin{itemize}
