--- a/doc/Interni/Verbali/VE_17-01-10.tex
+++ b/doc/Interni/Verbali/VE_17-01-10.tex
@@ -20,7 +20,7 @@
 	\item[Orario] 14:30 - 16:00;
 	\item[Durata] 1 ora e 30 minuti;
 	\item[Luogo incontro] \ZU, sede di via Cittadella 7, Padova;
-	\item[Oggetto] presentazione al \GP di un breve caso d'uso che esemplifica le funzionalità più importanti del prodotto;
+	\item[Oggetto] presentazione al \GP di un breve \gloss{caso d'uso} che esemplifica le funzionalità più importanti del prodotto;
 	\item[Segretario] \MM; 
 	\item[Partecipanti] \GP, \LB, \GG, \MM.
 \end{description}
