--- a/doc/Interni/Verbali/VI_16-12-12.tex
+++ b/doc/Interni/Verbali/VI_16-12-12.tex
@@ -25,8 +25,8 @@
 	\item[Partecipanti] \ALL.
 \end{description}
 
-Durante la riunione si è discusso degli strumenti da utilizzare nel corso del progetto. Alcuni criteri di scelta sono stati: che gli strumenti fossero “standard”; che non fossero eccessivamente complicati da utilizzare né da imparare; che si integrassero il più possibile tra di loro. Per generare la documentazione abbiamo adottato \gloss{Latex}, al fine di ottenere una maggiore automazione e modularità. Per la gestione automatizzata dei requisiti, ci è venuta in aiuto un'interfaccia open-source \gloss{PHP}/\gloss{MySQL} chiamata “\gloss{PragmaDB}”, ideata da alcuni nostri predecessori. Sono stati inoltre analizzati alcuni software per il controllo del codice e dei documenti quali \gloss{Sonarqube} e \gloss{Travis} che si integra bene con \gloss{Github}, e altre tecnologie circa \gloss{java}, \gloss{javascript}, \gloss{javaDoc} ed infine \gloss{IntelliJIDEA}.
+Durante la riunione si è discusso degli strumenti da utilizzare nel corso del progetto. Alcuni criteri di scelta sono stati: che gli strumenti fossero “standard”; che non fossero eccessivamente complicati da utilizzare né da imparare; che si integrassero il più possibile tra di loro. Per generare la documentazione abbiamo adottato \gloss{Latex}, al fine di ottenere una maggiore automazione e modularità. Per la gestione automatizzata dei requisiti, ci è venuta in aiuto un'interfaccia open-source \gloss{PHP}/\gloss{My\gloss{SQL}} chiamata “\gloss{PragmaDB}”, ideata da alcuni nostri predecessori. Sono stati inoltre analizzati alcuni software per il controllo del codice e dei documenti quali Sonarqube e \gloss{Travis} che si integra bene con \gloss{Git}hub, e altre tecnologie circa java, javascript, javaDoc ed infine IntelliJ\gloss{IDE}A.
 
-Sono state scelte le domande da proporre circa la definizione dei requisiti del progetto. In particolare, è stato pensato di porre alcune domande basilari come la scelta del linguaggio da generare (\gloss{Java} o \gloss{Javascript}) e la scelta della lingua per la documentazione del software(italiano o inglese); inoltre, sono stati formalizzati i dubbi sorti sulla natura stessa di questo progetto così particolare.
+Sono state scelte le domande da proporre circa la definizione dei requisiti del progetto. In particolare, è stato pensato di porre alcune domande basilari come la scelta del linguaggio da generare (\gloss{Java} o Javascript) e la scelta della lingua per la documentazione del software(italiano o inglese); inoltre, sono stati formalizzati i dubbi sorti sulla natura stessa di questo progetto così particolare.
 
 \end{document}
