--- a/doc/Interni/Verbali/VI_17-01-02.tex
+++ b/doc/Interni/Verbali/VI_17-01-02.tex
@@ -20,11 +20,11 @@
 	\item[Orario] 09:30 - 13:30;
 	\item[Durata] 4 ore;
 	\item[Luogo incontro] abitazione di \PB;
-	\item[Oggetto] discussione dei requisiti, linguaggio da utilizzare lato server, progresso documentazione, modifiche \gloss{PragmaDB};
+	\item[Oggetto] discussione dei requisiti, linguaggio da utilizzare lato \gloss{server}, progresso documentazione, modifiche \gloss{PragmaDB};
 	\item[Segretario] \PB; 
 	\item[Partecipanti] \ALL.
 \end{description}
 
-Durante la riunione sono stati esposti i progressi sulla documentazione da tutti i membri del gruppo. Dopo ciò, è stato deciso di utilizzare \gloss{Java} come linguaggio di programmazione per il \gloss{lato server} dell'applicativo da realizzare e, infine, sono stati analizzati tutti i requisiti da inserire nell'\AdR{} e le modifiche da apportare alla parte \gloss{PHP} di \gloss{PragmaDB} sull'esportazione del glossario in \gloss{Latex}.
+Durante la riunione sono stati esposti i progressi sulla documentazione da tutti i membri del gruppo. Dopo ciò, è stato deciso di utilizzare \gloss{Java} come linguaggio di programmazione per il lato server dell'applicativo da realizzare e, infine, sono stati analizzati tutti i requisiti da inserire nell'\AdR{} e le modifiche da apportare alla parte \gloss{PHP} di PragmaDB sull'esportazione del glossario in \gloss{Latex}.
 
 \end{document}
