--- a/doc/util/hx-macro.sty
+++ b/doc/util/hx-macro.sty
@@ -21,7 +21,7 @@ L'editor dovrà infine essere fruibile dall'utente attraverso un browser desktop
 \newcommand{\presgloss}{
 Per rendere più semplice e chiara la comprensione ed evitare ogni ambiguità relativa ai termini utilizzati nei documenti, viene allegato il documento \Glossario, nel quale vengono raccolte le spiegazioni di termini tecnici o ambigui, di acronimi o abbreviazioni.
 
-Per rendere più facile la lettura, i termini presenti nel glossario saranno marcati con il pedice $g$.
+Per rendere più facile la lettura, la prima occorrenza di ogni termine presente nel glossario verrà marcato con il seguente pedice: \ped{$g$}.
 }
 
 % Membri del gruppo:
