--- a/doc/Interni/Verbali/VI_16-12-20.tex
+++ b/doc/Interni/Verbali/VI_16-12-20.tex
@@ -25,7 +25,7 @@
 	\item[Partecipanti] \ALL.
 \end{description}
 
-Durante la riunione è stato scelto di realizzare un'\gloss{applicazione web} con \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript} dal lato \gloss{client}, che genera codice \gloss{Java}; dopo varie proposte il dominio applicativo del software da realizzare è risultato “giochi da tavolo”. 
+Durante la riunione è stato scelto di realizzare un'\gloss{applicazione web} con \gloss{HTML}5, \gloss{CSS}3 e \gloss{Java}Script dal lato \gloss{client}, che genera codice Java; dopo varie proposte il dominio applicativo del software da realizzare è risultato “giochi da tavolo”. 
 Sono stati analizzati i casi d'uso generali che hanno fatto sorgere domande esposte il giorno seguente al \GP.
 
 \end{document}
